--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mongoose": "^4.2.9",
-    "socket.io": "^1.3.7",
-    "underscore": "^1.8.3"
+    "socket.io": "^1.3.7"
   }
 }
